# eratosthenes_sieve_cli

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
eratosthenes_sieve/: pyproject.toml
eratosthenes_sieve/src/eratosthenes_sieve/: __init__.py  array.py  list.py
eratosthenes_sieve/tests/: test_sieve.py
